# Python_Selenium_E2E_Framework

./: .gitignore  README.md  pyproject.toml  pytest.ini
pages/: base_page.py  home_page.py  login_page.py
test_cases/: conftest.py  login_test.py
test_data/: login_test.json  login_test_new.json
